- CHG: The IGdiBitmap BoxBlur method has been removed. Try StackBlur instead.
- CHG: IContextMenuManager InitContext only accepts a handle list as an argument.
- ADD: Enable Windows XP support. Also, support for Vista/7/WINE with IE7/IE8 has
       been restored. ES5 features are still supported for those with IE9 or later.
- ADD: Add utils.WriteTextFile. Always creates a UTF8-BOM file.

v1.3.2.2
- ADD: Component now reports version on script error.
- FIX: JSplaylist/JS Smooth playlist have been unable to tag files since v1.3.0
       when foo_playcount was missing.

v1.3.2.1
- ADD: Add fb.AlwaysOnTop property. Can be used to read or write the setting. A
       new "on_always_on_top_changed" callback has been added to detect when it
       changes via any other means such as using the menu, keyboard shortcuts, etc.

v1.3.2
- FIX: Improved handling of utf8 files without BOM. This affects files loaded
       via the PREPROCESSOR section and the Configuration window>Tools>Import button.
       They should now be treated the same as files with BOM.

v1.3.1
- FIX: Fixed a bug where plman.IsPlaylistItemSelected didn't return a proper boolean
       value. Thanks to TheQwertiest for reporting.
- FIX: Fixed a bug where plman.ShowAutoPlaylistUI didn't always return the correct
       boolean value.
- CHG: plman.MovePlaylistSelection now returns a boolean value to indicate success
       or failure.
- CHG: Update docs for consistency with actual component behaviour. Some methods
       which returned useless values have been updated to return nothing.
- CHG: On failure, these now return -1
       IFbFileInfo InfoFind
       IFbFileInfo MetaFind
       IFbMetadbHandleList BSearch
       IFbMetadbHandleList Find
       plman.ActivePlaylist
       plman.CreateAutoPlaylist
       plman.PlayingPlaylist
- CHG: Remove the whole IStyleTextRender interface. Anything that uses
       gdi.CreateStyleTextRender or was based on "glow text sample.txt"
       will no longer work